--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://khaleddoosama.github.io/syncfusion-dashboard",
+  "homepage": ".",
   "name": "project_syncfusion_dashboard",
   "version": "0.1.0",
   "private": true,
